# Ongaku

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Ongaku-Windows.vcxproj  Ongaku.sln  Ongaku.vcxproj  Ongaku.vcxproj.filters  README.md
Modules/iTunes-Wrapper/: CMakeLists.txt  iTunes.cpp  iTunes.h
Sources/: Main.c  Manifest.rc  Manifest.xml
modules/: README.md
source/: icon.cpp  icon.h  icon.hpp  main.cpp  manifest.aps  manifest.rc
